--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
       </div>
     </header>
 
-    <main>
+    <!-- <main> -->
       <!-- SECTION HERO -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- SECTION OUR FEATURES -->
-      <section class="section features">
+      <!-- <section class="section features">
         <div class="container">
           <h2 class="section-title visually-hidden">Our Features</h2>
           <ul class="features-list list">
@@ -122,9 +122,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- SECTION OUR WORK -->
-      <section class="section work">
+      <!-- <section class="section work">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
@@ -154,9 +154,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- SECTION OUR TEAM -->
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -395,9 +395,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- SECTION CUSTOMERS -->
-      <section class="section customers">
+      <!-- <section class="section customers">
         <div class="container">
           <h2 class="section-title">Customers</h2>
 
@@ -447,9 +447,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-box">
         <div class="footer-desc">
           <a href="./index.html" class="logo"
@@ -459,10 +459,10 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
-        </div>
+        </div> -->
 
         <!-- SOCIAL_LINKS -->
-        <div class="social-links">
+        <!-- <div class="social-links">
           <h4 class="social-list-title">Social media</h4>
           <ul class="social-list list">
             <li class="social-list-item">
@@ -494,9 +494,9 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
         <!-- Subscribe-form-field -->
-        <div>
+        <!-- <div>
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="email-form-desc">
@@ -609,7 +609,7 @@
           <button class="modal-form-send" type="submit">Send</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
