--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
               <a href="#" class="menu-link">Contacts</a>
             </li>
           </ul>
+          <button type="button" class="mobile-menu-button">
+            <svg class="mobile-menu-open-icon" width="32" height="22">
+              <use href="./images/icons.svg#burger-icon"></use>
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
         </nav>
+        
 
         <!-- Contacts -->
         <address class="contacts-box">
@@ -56,6 +63,8 @@
         </address>
       </div>
     </header>
+
+    
 
     <!-- <main> -->
       <!-- SECTION HERO -->
