--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </address>
       
 
-      <button type="button" class="mobile-menu-btn">
+      <button type="button" class="mobile-menu-btn js-open-menu" aria-expanded="false"
+      aria-controls="mobile-menu">
         <svg class="mobile-menu-open-icon" width="32" height="22">
           <use href="./images/icons.svg#burger-icon"></use>
           <!-- <use href="./images/icons.svg#icon-close"></use> -->
@@ -527,9 +528,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -618,8 +619,65 @@
 
           <button class="modal-form-send" type="submit">Send</button>
         </form>
-      </div>
-    </div> -->
+      </div> -->
+
+       <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="mobile-menu-btn-close js-close-menu">
+
+        <svg class="mobile-menu-btn-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg> 
+      </button>
+
+      <ul class="mobile-menu">
+        <li class="mobile-menu-item"><a href="./index.html" class="mobile-menu-link ">Studio</a></li>
+        <li class="mobile-menu-item"><a href="./portfolio.html" class="mobile-menu-link">Portfolio</a></li>
+        <li class="mobile-menu-item"><a href="#" class="mobile-menu-link">Contacts</a></li>
+      </ul>
+      <ul class="mobile-menu-contacts list">
+        <li class="mobile-menu-contacts-item"><a href="tel:+110001111111" class="mobile-menu-contacts-tel">+11 (000) 111-11-11</a></li>
+        <li class="mobile-menu-contacts-item"><a href="mailto:info@devstudio.com" class="mobile-menu-contacts-email">info@devstudio.com</a></li>
+      </ul>
+
+      <ul class="mobile-menu-list list">
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link" href="#" aria-label="instagram">
+            <svg class="mobile-menu-list-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link" href="#" aria-label="twitter">
+            <svg class="mobile-menu-list-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link" href="#" aria-label="facebook">
+            <svg class="mobile-menu-list-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link" href="#" aria-label="linkedin">
+            <svg class="mobile-menu-list-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    
+
+    <!-- перевірити ци дів нижче -->
+  </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
