Update section hero

--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
 
     
 
-    <!-- <main> -->
+    <main>
       <!-- SECTION HERO -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- SECTION OUR FEATURES -->
-      <!-- <section class="section features">
+      <section class="section features">
         <div class="container">
           <h2 class="section-title visually-hidden">Our Features</h2>
           <ul class="features-list list">
@@ -133,7 +133,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- SECTION OUR WORK -->
       <!-- <section class="section work">
         <div class="container">
