Add section our work

--- a/index.html
+++ b/index.html
@@ -135,37 +135,55 @@
         </div>
       </section>
       <!-- SECTION OUR WORK -->
-      <!-- <section class="section work">
+      <section class="section work">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
             <li class="work-list-item">
-              <img
+              <picture>
+                <source
+                srcset="./images/our_work/computer.jpg 1x, ./images/our_work/computer@2x.jpg 2x" 
+                media="(min-width: 1200px)"
+                >
+                <img
                 src="./images/our_work/computer.jpg"
                 alt="computer"
                 width="360"
                 height="300"
               />
+              </picture>
             </li>
             <li class="work-list-item">
+              <picture>
+                <source srcset="./images/our_work/cellphone.jpg 1x, ./images/our_work/cellphone@2x.jpg 2x" 
+                media="(min-width: 1200px)"
+                >
               <img
                 src="./images/our_work/cellphone.jpg"
                 alt="cellphone"
                 width="360"
                 height="300"
               />
+            </picture>
             </li>
             <li class="work-list-item">
+              <picture>
+                <source srcset="./images/our_work/laptop_and_cellphone.jpg 1x, ./images/our_work/laptop_and_cellphone@2x.jpg 2x"
+                media="(min-width: 1200px)">
               <img
                 src="./images/our_work/laptop_and_cellphone.jpg"
                 alt="laptop and cellphone"
                 width="360"
                 height="300"
               />
+            </picture>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+
+
+
       <!-- SECTION OUR TEAM -->
       <!-- <section class="section team">
         <div class="container">
