--- a/index.html
+++ b/index.html
@@ -181,21 +181,26 @@
           </ul>
         </div>
       </section>
-
-
-
       <!-- SECTION OUR TEAM -->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
+              <picture class="img-wrap">
+                <source srcset="./images/our_team/guerrero_desk.jpg 1x, ./images/our_team/guerrero_desk@2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/our_team/guerrero_tab.jpg 1x, ./images/our_team/guerrero_tab@2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/our_team/guerrero_tel.jpg 1x, ./images/our_team/guerrero_tel@2x.jpg 2x"
+                media="(max-width: 767px)">
               <img
-                src="./images/our_team/guerrero.jpg"
+                src="./images/our_team/guerrero_tel.jpg"
                 alt="middle-aged man with beard"
                 width="264"
                 height="260"
               />
+            </picture>
               <div class="team-desc">
                 <h3 class="team-list-title">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
@@ -249,12 +254,20 @@
             </li>
 
             <li class="team-list-item">
+              <picture class="img-wrap">
+                <source srcset="./images/our_team/ford_desk.jpg 1x, ./images/our_team/ford_desk@2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/our_team/ford_tab.jpg 1x, ./images/our_team/ford_tab@2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/our_team/ford_tel.jpg 1x, ./images/our_team/ford_tel@2x.jpg 2x"
+                media="(max-width: 767px)">
               <img
-                src="./images/our_team/ford.jpg"
+                src="./images/our_team/ford_tel.jpg"
                 alt="young smiling man in shirt"
                 width="264"
                 height="260"
               />
+            </picture>
               <div class="team-desc">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
@@ -307,12 +320,21 @@
               </div>
             </li>
             <li class="team-list-item">
+              <picture class="img-wrap">
+                <source srcset="./images/our_team/garcia_desk.jpg 1x, ./images/our_team/garcia_desk@2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/our_team/garcia_tab.jpg 1x, ./images/our_team/garcia_tab@2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/our_team/garcia_tel.jpg 1x, ./images/our_team/garcia_tel@2x.jpg 2x"
+                media="(max-width: 767px)">
               <img
-                src="./images/our_team/garcia.jpg"
+                src="./images/our_team/garcia_tel.jpg"
                 alt="young girl in a pink sweater"
                 width="264"
                 height="260"
               />
+            </picture>
+            
               <div class="team-desc">
                 <h3 class="team-list-title">Camila Garcia</h3>
                 <p class="team-list-text">Marketing</p>
@@ -365,12 +387,20 @@
               </div>
             </li>
             <li class="team-list-item">
+              <picture class="img-wrap">
+                <source srcset="./images/our_team/wilson_desk.jpg 1x, ./images/our_team/wilson_desk@2x.jpg 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/our_team/wilson_tab.jpg 1x, ./images/our_team/wilson_tab@2x.jpg 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/our_team/wilson_tel.jpg 1x, ./images/our_team/wilson_tel@2x.jpg 2x"
+                media="(max-width: 767px)">
               <img
-                src="./images/our_team/wilson.jpg"
+                src="./images/our_team/wilson_tel.jpg"
                 alt="young smiling man in t-shirt"
                 width="264"
                 height="260"
               />
+            </picture>
               <div class="team-desc">
                 <h3 class="team-list-title">Daniel Wilson</h3>
                 <p class="team-list-text">UI Designer</p>
@@ -424,7 +454,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+
+
       <!-- SECTION CUSTOMERS -->
       <!-- <section class="section customers">
         <div class="container">
