--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
 
       <!-- SECTION CUSTOMERS -->
-      <!-- <section class="section customers">
+      <section class="section customers">
         <div class="container">
           <h2 class="section-title">Customers</h2>
 
@@ -508,9 +508,9 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- FOOTER -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-box">
         <div class="footer-desc">
           <a href="./index.html" class="logo"
@@ -520,10 +520,10 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
-        </div> -->
+        </div>
 
         <!-- SOCIAL_LINKS -->
-        <!-- <div class="social-links">
+        <div class="social-links">
           <h4 class="social-list-title">Social media</h4>
           <ul class="social-list list">
             <li class="social-list-item">
@@ -555,9 +555,9 @@
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
         <!-- Subscribe-form-field -->
-        <!-- <div>
+        <div class="subscribe-box">
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="email-form-desc">
@@ -578,7 +578,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -726,6 +726,10 @@
   </div>
 
     </div>
+
+    
+
+
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script defer src="js/mobile-menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
