Update modal window

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -669,7 +669,7 @@
 
           <button class="modal-form-send" type="submit">Send</button>
         </form>
-      </div> -->
+      </div>
 
        <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="mobile-menu-btn-close js-close-menu">
@@ -732,6 +732,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script defer src="js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
