--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                   alt="computer"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
               </picture>
             </li>
@@ -170,6 +171,7 @@
                   alt="cellphone"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
               </picture>
             </li>
@@ -187,6 +189,7 @@
                   alt="laptop and cellphone"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
               </picture>
             </li>
@@ -226,6 +229,7 @@
                   alt="middle-aged man with beard"
                   width="264"
                   height="260"
+                  loading="lazy"
                 />
               </picture>
               <div class="team-desc">
@@ -308,6 +312,7 @@
                   alt="young smiling man in shirt"
                   width="264"
                   height="260"
+                  loading="lazy"
                 />
               </picture>
               <div class="team-desc">
@@ -389,6 +394,7 @@
                   alt="young girl in a pink sweater"
                   width="264"
                   height="260"
+                  loading="lazy"
                 />
               </picture>
 
@@ -471,6 +477,7 @@
                   alt="young smiling man in t-shirt"
                   width="264"
                   height="260"
+                  loading="lazy"
                 />
               </picture>
               <div class="team-desc">
