--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,17 @@
             </li>
           </ul>
         </address>
+        <button
+          type="button"
+          class="mobile-menu-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#burger-icon"></use>
+          </svg>
+        </button>
+
       </div>
     </header>
 
@@ -83,12 +94,39 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+
+
+
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/banking_app_desk.jpg    1x,
+                        ./images/portfolio/banking_app_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/banking_app_tab.jpg    1x,
+                      ./images/portfolio/banking_app_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/banking_app_tel.jpg    1x,
+                      ./images/portfolio/banking_app_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/banking_app.jpg"
+                    src="./images/portfolio/banking_app_tel.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -103,16 +141,39 @@
                 </div></a
               >
             </li>
-
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile_phone_desk.jpg    1x,
+                        ./images/portfolio/mobile_phone_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/mobile_phone_tab.jpg    1x,
+                      ./images/portfolio/mobile_phone_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/mobile_phone_tel.jpg    1x,
+                      ./images/portfolio/mobile_phone_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/mobile_phone.jpg"
+                    src="./images/portfolio/mobile_phone_tel.jpg"
                     alt="mobile phone is reading QR code"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -129,12 +190,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/laptop_and_sellphone_desk.jpg    1x,
+                        ./images/portfolio/laptop_and_sellphone_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/laptop_and_sellphone_tab.jpg    1x,
+                      ./images/portfolio/laptop_and_sellphone_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/laptop_and_sellphone_tel.jpg    1x,
+                      ./images/portfolio/laptop_and_sellphone_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/laptop_and_sellphone.jpg"
+                    src="./images/portfolio/laptop_and_sellphone_tel.jpg"
                     alt="laptop and cellphone"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -151,12 +236,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/driver_desk.jpg    1x,
+                        ./images/portfolio/driver_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/driver_tab.jpg    1x,
+                      ./images/portfolio/driver_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/driver_tel.jpg    1x,
+                      ./images/portfolio/driver_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/driver.jpg"
+                    src="./images/portfolio/driver_tel.jpg"
                     alt="a person driving a car"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -173,12 +282,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/screen_desk.jpg    1x,
+                        ./images/portfolio/screen_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/screen_tab.jpg    1x,
+                      ./images/portfolio/screen_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/screen_tel.jpg    1x,
+                      ./images/portfolio/screen_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/screen_illustrations.jpg"
+                    src="./images/portfolio/screen_tel.jpg"
                     alt="Screen Illustrations"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -195,12 +328,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                  <source
+                      srcset="
+                        ./images/portfolio/girl_desk.jpg    1x,
+                        ./images/portfolio/girl_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/girl_tab.jpg    1x,
+                      ./images/portfolio/girl_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/girl_tel.jpg    1x,
+                      ./images/portfolio/girl_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/girl_with_sellphone.jpg"
+                    src="./images/portfolio/girl_tel.jpg"
                     alt="smiling girl looks at the sellphone"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -217,12 +374,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/smart_home_desk.jpg    1x,
+                        ./images/portfolio/smart_home_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/smart_home_tab.jpg    1x,
+                      ./images/portfolio/smart_home_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/smart_home_tel.jpg    1x,
+                      ./images/portfolio/smart_home_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/smart_home.jpg"
+                    src="./images/portfolio/smart_home_tel.jpg"
                     alt="smart home technology"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -241,12 +422,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/organic_food_desk.jpg    1x,
+                        ./images/portfolio/organic_food_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/organic_food_tab.jpg    1x,
+                      ./images/portfolio/organic_food_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/organic_food_tel.jpg    1x,
+                      ./images/portfolio/organic_food_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/organic_food.jpg"
+                    src="./images/portfolio/organic_food_tel.jpg"
                     alt="a woman carries a bag of vegetables"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -263,12 +468,36 @@
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-list-link">
                 <div class="portfolio-list-img-box">
+                  <picture class="portf-wrap">
+                    <source
+                      srcset="
+                        ./images/portfolio/coffe_desk.jpg    1x,
+                        ./images/portfolio/coffe_desk@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/coffe_tab.jpg    1x,
+                      ./images/portfolio/coffe_tab@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                      ./images/portfolio/coffe_tel.jpg    1x,
+                      ./images/portfolio/coffe_tel@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
                   <img
-                    src="./images/portfolio/coffe.jpg"
+                    src="./images/portfolio/coffe_tel.jpg"
                     alt="the man pours milk into the coffee"
-                    width="360"
-                    height="300"
+                    width="396"
+                    height="280"
+                    loading="lazy"
                   />
+                  </picture>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -353,7 +582,71 @@
             </button>
           </form>
         </div>
+
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button class="mobile-menu-btn-close js-close-menu">
+            <svg class="mobile-menu-btn-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu">
+            <li class="mobile-menu-item">
+              <a href="./index.html" class="mobile-menu-link ">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="./portfolio.html" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link current">Contacts</a>
+            </li>
+          </ul>
+          <ul class="mobile-menu-contacts list">
+            <li class="mobile-menu-contacts-item">
+              <a href="tel:+110001111111" class="mobile-menu-contacts-tel"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-menu-contacts-item">
+              <a href="mailto:info@devstudio.com" class="mobile-menu-contacts-email"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+    
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="#" aria-label="instagram">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="#" aria-label="twitter">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="#" aria-label="facebook">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="#" aria-label="linkedin">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
