--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,7 @@
                   <img
                     src="./images/portfolio/banking_app_tel.jpg"
                     alt="Banking App"
+                    class="image"
                     width="396"
                     height="280"
                     loading="lazy"
@@ -171,6 +172,7 @@
                     alt="mobile phone is reading QR code"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -217,6 +219,7 @@
                     alt="laptop and cellphone"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -263,6 +266,7 @@
                     alt="a person driving a car"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -309,6 +313,7 @@
                     alt="Screen Illustrations"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -355,6 +360,7 @@
                     alt="smiling girl looks at the sellphone"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -401,6 +407,7 @@
                     alt="smart home technology"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -449,6 +456,7 @@
                     alt="a woman carries a bag of vegetables"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -495,6 +503,7 @@
                     alt="the man pours milk into the coffee"
                     width="396"
                     height="280"
+                    class="image"
                     loading="lazy"
                   />
                   </picture>
@@ -518,7 +527,7 @@
     <footer class="footer">
       <div class="container footer-box">
         <div class="footer-desc">
-          <a href="./index.html" class="logo"
+          <a href="./index.html" class="logo footer-desc"
             >Web<span class="logo-footer">Studio</span></a
           >
           <p class="footer-text">
