--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="container header-box">
+      <div class="container header-box heder-portfolio">
         <!-- Navigation -->
         <nav class="navigation">
           <a href="./index.html" class="logo"
