--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     ./images/our_team/guerrero_tel.jpg    1x,
                     ./images/our_team/guerrero_tel@2x.jpg 2x
                   "
-                  media="(max-width: 767px)"
+                  media="(min-width: 480px)"
                 />
                 <img
                   src="./images/our_team/guerrero_tel.jpg"
@@ -305,7 +305,7 @@
                     ./images/our_team/ford_tel.jpg    1x,
                     ./images/our_team/ford_tel@2x.jpg 2x
                   "
-                  media="(max-width: 767px)"
+                  media="(min-width: 480px)"
                 />
                 <img
                   src="./images/our_team/ford_tel.jpg"
@@ -387,7 +387,7 @@
                     ./images/our_team/garcia_tel.jpg    1x,
                     ./images/our_team/garcia_tel@2x.jpg 2x
                   "
-                  media="(max-width: 767px)"
+                  media="(min-width: 480px)"
                 />
                 <img
                   src="./images/our_team/garcia_tel.jpg"
@@ -470,7 +470,7 @@
                     ./images/our_team/wilson_tel.jpg    1x,
                     ./images/our_team/wilson_tel@2x.jpg 2x
                   "
-                  media="(max-width: 767px)"
+                  media="(min-width: 480px)"
                 />
                 <img
                   src="./images/our_team/wilson_tel.jpg"
